// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoverCard renders ExpandingCard correctly 1`] = `
<span
  className="ms-layer"
>
  <div
    className=
        ms-Fabric
        ms-Layer-content
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #333333;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          visibility: visible;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
        button {
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow: visible;
        }
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onDrag={[Function]}
    onDragEnd={[Function]}
    onDragEnter={[Function]}
    onDragExit={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDragStart={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onSubmit={[Function]}
  >
    <div
      className=
          ms-Callout-container
          {
            position: relative;
          }
    >
      <div
        className=
            ms-Callout
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-color: #eaeaea;
              border-style: solid;
              border-width: 1px;
              box-shadow: 0 0 5px 0px rgba(0,0,0,0.4);
              box-sizing: border-box;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              outline: transparent;
              position: absolute;
            }
            @media screen and (-ms-high-contrast: active){& {
              border-color: WindowText;
              border-style: solid;
              border-width: 1px;
            }
            &::-moz-focus-inner {
              border: 0px;
            }
        content={
          <div
            onKeyDown={[Function]}
          >
            <div>
              <div>
                TEST
              </div>
            </div>
            <div>
              <div>
                <div>
                  TEST
                </div>
              </div>
            </div>
          </div>
        }
        style={
          Object {
            "filter": "opacity(0)",
            "opacity": 0,
          }
        }
        tabIndex={-1}
      >
        <div
          className=
              ms-Callout-main
              {
                background-color: #ffffff;
                overflow-x: hidden;
                overflow-y: hidden;
                position: relative;
              }
          onKeyDown={[Function]}
          style={
            Object {
              "maxHeight": 718,
              "outline": "none",
              "overflowY": "hidden",
            }
          }
        >
          <div
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
          >
            <div
              onKeyDown={[Function]}
            >
              <div>
                <div>
                  TEST
                </div>
              </div>
              <div>
                <div>
                  <div>
                    TEST
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`HoverCard renders PlainCard correctly 1`] = `
<span
  className="ms-layer"
>
  <div
    className=
        ms-Fabric
        ms-Layer-content
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #333333;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          visibility: visible;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
        button {
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          overflow: visible;
        }
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onDrag={[Function]}
    onDragEnd={[Function]}
    onDragEnter={[Function]}
    onDragExit={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDragStart={[Function]}
    onDrop={[Function]}
    onFocus={[Function]}
    onInput={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    onMouseUp={[Function]}
    onSubmit={[Function]}
  >
    <div
      className=
          ms-Callout-container
          {
            position: relative;
          }
    >
      <div
        className=
            ms-Callout
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-color: #eaeaea;
              border-style: solid;
              border-width: 1px;
              box-shadow: 0 0 5px 0px rgba(0,0,0,0.4);
              box-sizing: border-box;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              outline: transparent;
              position: absolute;
            }
            @media screen and (-ms-high-contrast: active){& {
              border-color: WindowText;
              border-style: solid;
              border-width: 1px;
            }
            &::-moz-focus-inner {
              border: 0px;
            }
        content={
          <div
            onKeyDown={[Function]}
          >
            <div
              style={
                Object {
                  "height": "500px",
                  "width": "200px",
                }
              }
            >
              TEST
            </div>
          </div>
        }
        style={
          Object {
            "filter": "opacity(0)",
            "opacity": 0,
          }
        }
        tabIndex={-1}
      >
        <div
          className=
              ms-Callout-main
              {
                background-color: #ffffff;
                overflow-x: hidden;
                overflow-y: auto;
                position: relative;
              }
          onKeyDown={[Function]}
          style={
            Object {
              "maxHeight": 718,
              "outline": "none",
              "overflowY": undefined,
            }
          }
        >
          <div
            onFocusCapture={[Function]}
            onKeyDown={[Function]}
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                style={
                  Object {
                    "height": "500px",
                    "width": "200px",
                  }
                }
              >
                TEST
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`HoverCard renders target wrapped by HoverCard correctly 1`] = `
<div
  data-is-focusable={true}
>
  Content
</div>
`;
